--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "dependencies": {
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-stars": "^2.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
