--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     ]
   },
   "dependencies": {
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
