--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "next": "15.1.3",
+    "rc-pagination": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
